--- a/src/app/components/recent-work/recent-work.component.html
+++ b/src/app/components/recent-work/recent-work.component.html
@@ -1,1 +1,36 @@
-<p>recent-work works!</p>
+
+<div class="flex-container">
+  <div>
+    <div class="card" style="width: 18rem;">
+
+      <div class="card-body">
+        <h5 class="card-title">Capitale Degital</h5>
+        <img src="assets/imgs/img.png" >
+        <p class="card-text">Stage 1 ére année</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Solpack</h5>
+        <img src="assets/imgs/sopack.jpg" style="height: 170px; width: 170px;">
+        <p class="card-text">Stage 2 éme année</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div>
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Zsoft</h5>
+        <img src="assets/imgs/Zsoft.jpg" style="height: 170px; width: 170px;">
+        <p class="card-text">Stage 3 éme année</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
