--- a/src/app/components/competences/competences.component.html
+++ b/src/app/components/competences/competences.component.html
@@ -1,1 +1,337 @@
-<p>competences works!</p>
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        les langages de programmation
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="row g-0">
+          <div class="col-sm-6 col-md-4" >JAVA</div>
+          <div class="col-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >PHP</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >PYTHON</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >C</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >C++</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >JAVASCRIPT</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >TYPESCRIPT</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >HTML 5</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >CSS 3</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Base de donnée
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="row g-0">
+          <div class="col-sm-6 col-md-4" > MYSQL</div>
+          <div class="col-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >ORACLE</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >MARIADB</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >MONGODB</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Framework
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="row g-0">
+          <div class="col-sm-6 col-md-4" >JEE</div>
+          <div class="col-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >SPRING</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
+            <div class="row g-0">
+              <div class="col-6 col-md-4" >SPRING BOOT</div>
+              <div class="col-sm-6 col-md-8">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row g-0">
+              <div class="col-6 col-md-4" >SPRING DATA</div>
+              <div class="col-sm-6 col-md-8">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row g-0">
+              <div class="col-6 col-md-4" >SPRING SECURITY</div>
+              <div class="col-sm-6 col-md-8">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row g-0">
+              <div class="col-6 col-md-4" >SPRING CLOUD GATEWAY</div>
+              <div class="col-sm-6 col-md-8">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row g-0">
+              <div class="col-6 col-md-4" >SPRING MVC</div>
+              <div class="col-sm-6 col-md-8">
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+            <br>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >ANGULAR</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >RXJS</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >REACTJS</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >THYMELEAF</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingfour">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+        Architecture
+      </button>
+    </h2>
+    <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="row g-0">
+          <div class="col-sm-6 col-md-4" >MONOLITHIQUE</div>
+          <div class="col-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >MICROSERVICE</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingfive">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
+        CONTENEURISATION
+      </button>
+    </h2>
+    <div id="collapsefive" class="accordion-collapse collapse" aria-labelledby="headingfive" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >DOCKER</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingsixe">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesixe" aria-expanded="false" aria-controls="collapsesixe">
+        CONCEPTION
+      </button>
+    </h2>
+    <div id="collapsesixe" class="accordion-collapse collapse" aria-labelledby="headingsixe" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >UML</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >Merise</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 35%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingseven">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseseven" aria-expanded="false" aria-controls="collapseseven">
+        CONCEPTS
+      </button>
+    </h2>
+    <div id="collapseseven" class="accordion-collapse collapse" aria-labelledby="headingsixe" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >TDD (Test Driven Development)</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >BDD (Behavior Driven Development)</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-6 col-md-4" >DDD (Domain Driven Design)</div>
+          <div class="col-sm-6 col-md-8">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
