--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,15 +1,21 @@
- <nav class="navbar navbar-expand-lg navbar-light bg-black" style="background-color: #e3f2fd;">
-   <div style="margin-left: 50px">
-     <img src="/assets/imgs/logo.jpg" width="30" height="30" alt="logo">
+ <nav class="navbar navbar-expand-lg navbar-light bg-black">
+   <a class="nav-item nav-link" routerLink="app-home-page" style="color: ivory;margin-left: 75px"><img src="/assets/imgs/logo.jpg" width="30" height="30" alt="logo"></a>
+   <div class="container" style="margin-left: 245px">
+     <div class="collapse navbar-collapse" id="navbarNav" style="margin-left: 75px">
+       <ul class="navbar-nav">
+         <li class="nav-item active">
+           <a class="nav-item nav-link" routerLink="how_i_am" style="color: ivory">About</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-item nav-link" routerLink="competences" style="color: ivory;margin-left: 30px">Competences</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-item nav-link" routerLink="recent_work" style="color: ivory;margin-left: 30px">RecentWork</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-item nav-link" routerLink="app-blogs" style="color: ivory;margin-left: 30px">Blogs</a>
+         </li>
+       </ul>
+     </div>
    </div>
-   <div class="container" style="height: 70px">
-   <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-      <div class="navbar-nav" style="">
-        <a class="nav-item nav-link" routerLink="how_i_am" style="color: ivory">How_I_AM</a>
-        <a class="nav-item nav-link" routerLink="competences" style="color: ivory">Competences</a>
-        <a class="nav-item nav-link" routerLink="recent_work" style="color: ivory">RecentWork</a>
-      </div>
-    </div>
-   </div>
-  </nav>
-
+ </nav>
