--- a/src/app/components/how-i-am/how-i-am.component.html
+++ b/src/app/components/how-i-am/how-i-am.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="top:75px">
+<div class="card" style="top:20px">
     <div class="card-header">
       How i am ?
     </div>
@@ -16,26 +16,45 @@
             <p>
               Ingénieur d'état en ingénierie du Web et Informatique Mobile (IWIM) à l'École Nationale Supérieure d'Informatique et d'Analyse des Systèmes (ENSIAS).
             </p>
-            <p style="margin-left: 100px">Dans ce site je te donne une vue global sur moi est sur mes expériences</p>
-            <p>
-              Wikipédia est un projet d’encyclopédie collective en ligne, universelle, multilingue et fonctionnant sur le principe du wiki. Ce projet vise à offrir un contenu librement réutilisable, objectif et vérifiable, que chacun peut modifier et améliorer.
+            <div class="alert alert-success" role="alert" style="margin-left: 380px;padding:0px">
+              <p style="margin-left: 10px">Dans ce site je te donne une vue global sur moi est sur mes expériences</p>
+            </div>
 
-              Wikipédia est définie par des principes fondateurs. Son contenu est sous licence Creative Commons BY-SA. Il peut être copié et réutilisé sous la même licence, sous réserve d'en respecter les conditions. Wikipédia fournit tous ses contenus gratuitement, sans publicité, et sans recourir à l'exploitation des données personnelles de ses utilisateurs.
-
-              Les rédacteurs des articles de Wikipédia sont bénévoles. Ils coordonnent leurs efforts au sein d'une communauté collaborative, sans dirigeant.
-
-              Aujourd'hui, Wikipédia en français compte :
-            </p>
-
-            <p>
-              Wikipédia est un projet d’encyclopédie collective en ligne, universelle, multilingue et fonctionnant sur le principe du wiki. Ce projet vise à offrir un contenu librement réutilisable, objectif et vérifiable, que chacun peut modifier et améliorer.
-
-              Wikipédia est définie par des principes fondateurs. Son contenu est sous licence Creative Commons BY-SA. Il peut être copié et réutilisé sous la même licence, sous réserve d'en respecter les conditions. Wikipédia fournit tous ses contenus gratuitement, sans publicité, et sans recourir à l'exploitation des données personnelles de ses utilisateurs.
-
-              Les rédacteurs des articles de Wikipédia sont bénévoles. Ils coordonnent leurs efforts au sein d'une communauté collaborative, sans dirigeant.
-
-              Aujourd'hui, Wikipédia en français compte :
-            </p>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><div class="card">
+                <div class="card-header">
+                  Diplôme
+                </div>
+                <div class="card-body" style="background-color: gold">
+                  <h5 class="card-title">INGÉNIERIE DU WEB ET INFORMATIQUE MOBILE</h5>
+                  <p class="card-text">ENSIAS (École Nationale Supérieure d'Informatique et d'Analyse des Systèmes)</p>
+                  <p class="small">Lieu : Rabat Maroc</p>
+                  <p class="small">Date : De 2019 à 2022</p>
+                </div>
+              </div></li>
+              <li class="list-group-item"><div class="card">
+                <div class="card-header">
+                  Diplôme
+                </div>
+                <div class="card-body" style="background-color: gold">
+                  <h5 class="card-title">LES CLASSES PRÉPARATOIRES AUX GRANDES ÉCOLES FILIÈRE (MP)</h5>
+                  <p class="card-text">LISSANE EDDINE IBN AL KHATIB</p>
+                  <p class="small">Lieu : Laayoune Maroc</p>
+                  <p class="small">Date : De 2019 à 2022</p>
+                </div>
+              </div></li>
+              <li class="list-group-item"><div class="card">
+                <div class="card-header">
+                  Diplôme
+                </div>
+                <div class="card-body" style="background-color: gold">
+                  <h5 class="card-title">BACCALAURÉAT EN SCIENCES MATH, OPTION A</h5>
+                  <p class="card-text">LYCEE LEMSSALA</p>
+                  <p class="small">Lieu : Laayoune Maroc</p>
+                  <p class="small">Date : De 2019 à 2022</p>
+                </div>
+              </div></li>
+            </ul>
           </div>
         </div>
         <div id="rightContent">
