--- a/src/app/components/how-i-am/how-i-am.component.html
+++ b/src/app/components/how-i-am/how-i-am.component.html
@@ -17,7 +17,7 @@
               Ingénieur d'état en ingénierie du Web et Informatique Mobile (IWIM) à l'École Nationale Supérieure d'Informatique et d'Analyse des Systèmes (ENSIAS).
             </p>
             <div class="alert alert-success" role="alert" style="margin-left: 380px;padding:0px">
-              <p style="margin-left: 10px">Dans ce site je te donne une vue global sur moi est sur mes expériences</p>
+              <p style="margin-left: 10px">Dans ce site je te donne une vue global sur moi est sur mes expériences ...</p>
             </div>
 
             <ul class="list-group list-group-flush">
@@ -25,7 +25,7 @@
                 <div class="card-header">
                   Diplôme
                 </div>
-                <div class="card-body" style="background-color: gold">
+                <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
                   <h5 class="card-title">INGÉNIERIE DU WEB ET INFORMATIQUE MOBILE</h5>
                   <p class="card-text">ENSIAS (École Nationale Supérieure d'Informatique et d'Analyse des Systèmes)</p>
                   <p class="small">Lieu : Rabat Maroc</p>
@@ -36,7 +36,7 @@
                 <div class="card-header">
                   Diplôme
                 </div>
-                <div class="card-body" style="background-color: gold">
+                <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
                   <h5 class="card-title">LES CLASSES PRÉPARATOIRES AUX GRANDES ÉCOLES FILIÈRE (MP)</h5>
                   <p class="card-text">LISSANE EDDINE IBN AL KHATIB</p>
                   <p class="small">Lieu : Laayoune Maroc</p>
@@ -47,7 +47,7 @@
                 <div class="card-header">
                   Diplôme
                 </div>
-                <div class="card-body" style="background-color: gold">
+                <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
                   <h5 class="card-title">BACCALAURÉAT EN SCIENCES MATH, OPTION A</h5>
                   <p class="card-text">LYCEE LEMSSALA</p>
                   <p class="small">Lieu : Laayoune Maroc</p>
