--- a/src/app/components/how-i-am/how-i-am.component.html
+++ b/src/app/components/how-i-am/how-i-am.component.html
@@ -5,7 +5,11 @@
     <div class="card-body">
       <div class="main-wrap">
         <div id="leftContent">
-          <h5 class="glitched" style="margin-left: 10px">Oussama Harchi</h5>
+          <div class="wrapper">
+          <ul class="dynamic-txts">
+            <li><span>Hello World! this is Oussama Harchi</span></li>
+          </ul>
+          </div>
           <div class="alert alert-primary" role="alert" style="overflow: hidden;">
             <p class="card-text" style="  float: left;">Full Stack Developer | ZSoft Consulting | ENSIAS |</p>
             <div *ngIf="!affichage" class="spinner-grow text-success" role="status"  style="float: right;width: 10px;height: 10px" >
