add blogs cards

--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -1,1 +1,40 @@
-<p>blogs works!</p>
+<div class="card mb-3" style="margin: 80px">
+  <div class="alert alert-warning" role="alert">
+    A simple warning alert—check it out!
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+</div>
+<div class="card mb-3" style="margin: 80px">
+  <div class="alert alert-warning" role="alert" style="margin: 20px">
+    A simple warning alert—check it out!
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+</div>
+<div class="card mb-3" style="margin: 80px">
+  <div class="alert alert-warning" role="alert" style="margin: 20px">
+    A simple warning alert—check it out!
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+</div>
+<div class="card mb-3" style="margin: 80px">
+  <div class="alert alert-warning" role="alert" style="margin: 20px">
+    A simple warning alert—check it out!
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+</div>
