--- a/src/app/components/how-i-am/how-i-am.component.html
+++ b/src/app/components/how-i-am/how-i-am.component.html
@@ -11,7 +11,7 @@
           </ul>
           </div>
           <div class="alert alert-primary" role="alert" style="overflow: hidden;">
-            <p class="card-text" style="  float: left;">Full Stack Developer | ZSoft Consulting | ENSIAS |</p>
+            <p class="card-text" style="float: left;">Full Stack Developer | ZSoft Consulting | ENSIAS |</p>
             <div *ngIf="!affichage" class="spinner-grow text-success" role="status"  style="float: right;width: 10px;height: 10px" >
               <span class="visually-hidden">Loading...</span>
             </div>
@@ -24,41 +24,46 @@
               <p style="margin-left: 10px">Dans ce site je te donne une vue global sur moi est sur mes expériences ...</p>
             </div>
 
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item"><div class="card">
-                <div class="card-header">
-                  Diplôme
-                </div>
-                <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
-                  <h5 class="card-title">INGÉNIERIE DU WEB ET INFORMATIQUE MOBILE</h5>
-                  <p class="card-text">ENSIAS (École Nationale Supérieure d'Informatique et d'Analyse des Systèmes)</p>
-                  <p class="small">Lieu : Rabat Maroc</p>
-                  <p class="small">Date : De 2019 à 2022</p>
-                </div>
-              </div></li>
-              <li class="list-group-item"><div class="card">
-                <div class="card-header">
-                  Diplôme
-                </div>
-                <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
-                  <h5 class="card-title">LES CLASSES PRÉPARATOIRES AUX GRANDES ÉCOLES FILIÈRE (MP)</h5>
-                  <p class="card-text">LISSANE EDDINE IBN AL KHATIB</p>
-                  <p class="small">Lieu : Laayoune Maroc</p>
-                  <p class="small">Date : De 2019 à 2022</p>
-                </div>
-              </div></li>
-              <li class="list-group-item"><div class="card">
-                <div class="card-header">
-                  Diplôme
-                </div>
-                <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
-                  <h5 class="card-title">BACCALAURÉAT EN SCIENCES MATH, OPTION A</h5>
-                  <p class="card-text">LYCEE LEMSSALA</p>
-                  <p class="small">Lieu : Laayoune Maroc</p>
-                  <p class="small">Date : De 2019 à 2022</p>
-                </div>
-              </div></li>
-            </ul>
+            <div class="card border-success mb-3">
+              <div class="card-header">Mes diplomes</div>
+              <div class="card-body text-success">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><div class="card">
+                    <div class="card-header">
+                      Diplôme
+                    </div>
+                    <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
+                      <h5 class="card-title">INGÉNIERIE DU WEB ET INFORMATIQUE MOBILE</h5>
+                      <p class="card-text">ENSIAS (École Nationale Supérieure d'Informatique et d'Analyse des Systèmes)</p>
+                      <p class="small">Lieu : Rabat Maroc</p>
+                      <p class="small">Date : De 2019 à 2022</p>
+                    </div>
+                  </div></li>
+                  <li class="list-group-item"><div class="card">
+                    <div class="card-header">
+                      Diplôme
+                    </div>
+                    <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
+                      <h5 class="card-title">LES CLASSES PRÉPARATOIRES AUX GRANDES ÉCOLES FILIÈRE (MP)</h5>
+                      <p class="card-text">LISSANE EDDINE IBN AL KHATIB</p>
+                      <p class="small">Lieu : Laayoune Maroc</p>
+                      <p class="small">Date : De 2019 à 2022</p>
+                    </div>
+                  </div></li>
+                  <li class="list-group-item"><div class="card">
+                    <div class="card-header">
+                      Diplôme
+                    </div>
+                    <div class="card-body" style="background-image: url('assets/imgs/background.jpg')">
+                      <h5 class="card-title">BACCALAURÉAT EN SCIENCES MATH, OPTION A</h5>
+                      <p class="card-text">LYCEE LEMSSALA</p>
+                      <p class="small">Lieu : Laayoune Maroc</p>
+                      <p class="small">Date : De 2019 à 2022</p>
+                    </div>
+                  </div></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
         <div id="rightContent">
