--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -1,5 +1,5 @@
 <div class="card mb-3" style="margin: 80px">
-  <div class="alert alert-warning" role="alert">
+  <div class="alert alert-warning" role="alert" style="margin: 20px">
     A simple warning alert—check it out!
   </div>
   <div class="card-body">
