--- a/src/app/components/how-i-am/how-i-am.component.html
+++ b/src/app/components/how-i-am/how-i-am.component.html
@@ -12,8 +12,8 @@
           </div>
           <div class="alert alert-primary" role="alert" style="overflow: hidden;">
             <p class="card-text" style="float: left;">Full Stack Developer | ZSoft Consulting | ENSIAS |</p>
-            <div *ngIf="!affichage" class="spinner-grow text-success" role="status"  style="float: right;width: 10px;height: 10px" >
-              <span class="visually-hidden">Loading...</span>
+            <div *ngIf="!affichage" class="spinner-border" role="status" style="float: right;width: 25px;height: 25px">
+              <span class="sr-only">Loading...</span>
             </div>
           </div>
           <div style="margin-left: 400px">
@@ -83,13 +83,17 @@
                 </ul>
               </div>
             </div>
+            <svg *ngIf="affichage" (click)="affichier()" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-arrow-up-fill" viewBox="0 0 16 16" style="margin-left: 1080px">
+              <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM7.5 6.707 6.354 7.854a.5.5 0 1 1-.708-.708l2-2a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707z"/>
+            </svg>
           </div>
         </div>
         <div id="rightContent">
           <img class="pdp" src="assets/imgs/photo_profil.jpg" style="margin-left: 73px">
           <br><br>
-          <button *ngIf="!affichage" class="btn btn-dark" style="position:relative; display:inline-block; float:right; background-color: cadetblue" (click)="affichier()">See more about me</button>
-          <button  *ngIf="affichage" class="btn btn-dark" style="position:relative; display:inline-block; float:right; background-color: red" (click)="affichier()">See less about me</button>
+          <svg *ngIf="!affichage" (click)="affichier()" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-arrow-down-fill" viewBox="0 0 16 16" style="margin-left: 170px">
+            <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM8 5a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5A.5.5 0 0 1 8 5z"/>
+          </svg>
         </div>
       </div>
     </div>
