add form comment

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -15,6 +15,9 @@
          <li class="nav-item">
            <a class="nav-item nav-link" routerLink="app-blogs" style="color: ivory;margin-left: 30px">Blogs</a>
          </li>
+         <li class="nav-item">
+           <a class="nav-item nav-link" routerLink="contact-me" style="color: ivory;margin-left: 30px">Contact</a>
+         </li>
        </ul>
      </div>
    </div>
